--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>EasyHosting | Welkom</title>
+    <title>Easy-Hosting | Welkom</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,14 +36,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand scroll-top"><em>E</em>asyHosting</a>
+                    <a href="#" class="navbar-brand scroll-top"><em>E</em>asy<em>-</em>Hosting</a>
                 </div>
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#" class="scroll-top">Homepagina</a></li>
                         <li><a href="#" class="scroll-link" data-id="about">Over ons</a></li>
-                        <li><a href="#" class="scroll-link" data-id="portfolio">Onze klanten</a></li>
+                        <li><a href="#" class="scroll-link" data-id="portfolio">Services</a></li>
                         <li><a href="#" class="scroll-link" data-id="contact-us">Contacteer Ons</a></li>
                     </ul>
                 </div>
@@ -59,8 +59,8 @@
     <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="text-content">
-                <h2>EasyHosting</h2>
-                <p>EasyHosting is een hosting service door en voor studenten.</p>
+                <h2>Easy-Hosting</h2>
+                <p>Easy-Hosting is een hosting service door en voor studenten.</p>
                 <div class="primary-white-button">
                     <a href="#" class="scroll-link" data-id="about">Meer info</a>
                 </div>
@@ -123,12 +123,12 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-12">
                         <div class="section-heading">
-                            <h4>Onze klanten</h4>
+                            <h4>Services</h4>
                             <div class="line-dec"></div>
-                            <p>Hier kan u enkele voorbeeleden zien van websites die via onze service worden gehost</p>
+                            <p>Hier ziet u welke services wij aanbieden!</p>
                             <div class="filter-categories">
                                 <ul class="project-filter">
-                                    <li class="filter" data-filter="all"><span>Alle klanten</span></li>
+                                    <li class="filter" data-filter="all"><span>Alle services</span></li>
                                     <li class="filter" data-filter="branding"><span>Branding</span></li>
                                     <li class="filter" data-filter="graphic"><span>Graphic</span></li>
                                     <li class="filter" data-filter="nature"><span>Nature</span></li>
@@ -248,8 +248,8 @@
             <div class="row">
                 <div class="col-md-4 col-sm-12">
                     <div class="logo">
-                        <a class="logo-ft scroll-top" href="#"><em>E</em>asyHosting</a>
-                        <p>Copyright &copy; 2020 EasyHosting</p>
+                        <a class="logo-ft scroll-top" href="#"><em>E</em>asy<em>-</em>Hosting</a>
+                        <p>Copyright &copy; 2020 Easy-Hosting</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
@@ -266,13 +266,13 @@
                         <h4>Meer info</h4>
                         <ul>
                             <li><em>Gsm</em>: 0474 26 27 04</li>
-                            <li><em>Email</em>: info@EasyHosting.be</li>
+                            <li><em>Email</em>: info@Easy-Hosting.be</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-12">
                     <div class="connect-us">
-                        <h4>onze sociale media</h4>
+                        <h4>Onze sociale media</h4>
                         <ul>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
