--- a/index.html
+++ b/index.html
@@ -144,42 +144,35 @@
                                     <div class="col-md-6 col-sm-6 project-item mix nature">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_01.jpg" data-lightbox="image-1"><img src="img/portfolio_item_01.jpg"></a>
+                                                <a href="img/1200px-PHP-logo.svg.png" data-lightbox="image-1"><img src="img/1200px-PHP-logo.svg.png"></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-6 project-item mix animation">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_02.jpg" data-lightbox="image-1"><img src="img/portfolio_item_02.jpg"></a>
+                                                <a href="img/sql.jpg" data-lightbox="image-1"><img src="img/sql.jpg"></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-6 project-item mix branding">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_03.jpg" data-lightbox="image-1"><img src="img/portfolio_item_03.jpg"></a>
+                                                <a href="img/encryption.jpg" data-lightbox="image-1"><img src="img/encryption.jpg"></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-6 project-item mix graphic nature">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_04.jpg" data-lightbox="image-1"><img src="img/portfolio_item_04.jpg"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix branding">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="img/portfolio_big_item_05.jpg" data-lightbox="image-1"><img src="img/portfolio_item_05.jpg"></a>
+                                                <a href="img/web_hosting.jpg" data-lightbox="image-1"><img src="img/web_hosting.jpg"></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-6 project-item mix graphic animation">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_06.jpg" data-lightbox="image-1"><img src="img/portfolio_item_06.jpg"></a>
+                                                <a href="img/ftp.png" data-lightbox="image-1"><img src="img/ftp.png"></a>
                                             </div>
                                         </div>
                                     </div>
