--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <div class="location">
                         <h4>Locatie</h4>
                         <ul>
-                            <li>Kloosterbaan 31 <br>2370 Arendonk</li>
+                            <li>Kleinhoefstraat 4 <br>2440 Geel</li>
                             <li>België, <br>Antwerpen</li>
                         </ul>
                     </div>
@@ -258,8 +258,8 @@
                     <div class="contact-info">
                         <h4>Meer info</h4>
                         <ul>
-                            <li><em>Gsm</em>: 0474 26 27 04</li>
-                            <li><em>Email</em>: info@Easy-Hosting.be</li>
+                            <li><em>Gsm</em>: <a href="tel:+32474262704">+32 (0)474 26 27 04</a></li>
+                            <li><em>Email</em>: <a href="mailto:info@easy-hosting.be">info@easy-hosting.be</a></li>
                         </ul>
                     </div>
                 </div>
