--- a/index.html
+++ b/index.html
@@ -129,50 +129,44 @@
                             <div class="filter-categories">
                                 <ul class="project-filter">
                                     <li class="filter" data-filter="all"><span>Alle services</span></li>
-                                    <li class="filter" data-filter="branding"><span>Branding</span></li>
-                                    <li class="filter" data-filter="graphic"><span>Graphic</span></li>
-                                    <li class="filter" data-filter="nature"><span>Nature</span></li>
-                                    <li class="filter" data-filter="animation"><span>Animation</span></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-8">
                         <div class="projects-holder-3">
+                        <div class="projects-holder-3">
                             <div class="projects-holder">
                                 <div class="row">
                                     <div class="col-md-6 col-sm-6 project-item mix nature">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/1200px-PHP-logo.svg.png" data-lightbox="image-1"><img src="img/1200px-PHP-logo.svg.png"></a>
+                                                <a href="img/php.png" data-lightbox="image-1"><img src="img/php.png"></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-6 project-item mix animation">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/sql.jpg" data-lightbox="image-1"><img src="img/sql.jpg"></a>
+                                                <a href="img/sql.png" data-lightbox="image-1"><img src="img/sql.png"></a>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix branding">
+
+
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6 col-sm-6 project-item mix graphic animation">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/encryption.jpg" data-lightbox="image-1"><img src="img/encryption.jpg"></a>
+                                                <a href="img/ftpbig.png" data-lightbox="image-1"><img src="img/ftpsmall.png"></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-6 project-item mix graphic nature">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/web_hosting.jpg" data-lightbox="image-1"><img src="img/web_hosting.jpg"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix graphic animation">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="img/ftp.png" data-lightbox="image-1"><img src="img/ftp.png"></a>
+                                                <a href="img/hostingbig.png" data-lightbox="image-1"><img src="img/hostingsmall.png"></a>
                                             </div>
                                         </div>
                                     </div>
@@ -258,8 +252,8 @@
                     <div class="contact-info">
                         <h4>Meer info</h4>
                         <ul>
-                            <li><em>Gsm</em>: <a href="tel:+32474262704">+32 (0)474 26 27 04</a></li>
-                            <li><em>Email</em>: <a href="mailto:info@easy-hosting.be">info@easy-hosting.be</a></li>
+                            <li><em>Gsm</em>: <br><a href="tel:+32474262704">+32 (0)474 26 27 04</a></li>
+                            <li><em>Email</em>: <br><a href="mailto:info@easy-hosting.be">info@easy-hosting.be</a></li>
                         </ul>
                     </div>
                 </div>
