--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                         <div class="icon">
                             <img src="img/service_icon_03.png" alt="">
                         </div>
-                        <h4>24/7 Support via mail of chat</h4>
+                        <h4>24/7 Support via livechat of ticketsystem.</h4>
                         <div class="line-dec"></div>
-                        <p>Contacteer ons via onze sociale media of via mail!</p>
+                        <p>Contacteer ons via onze livechat of ons <a href="http://172.27.66.110/index.php">ticketsysteem</a>!</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
@@ -130,38 +130,39 @@
                     </div>
                     <div class="col-md-8">
                         <div class="projects-holder-3">
-                        <div class="projects-holder-3">
-                            <div class="projects-holder">
-                                <div class="row">
-                                    <div class="col-md-6 col-sm-6 project-item mix nature">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="img/php.png" data-lightbox="image-1"><img src="img/php.png"></a>
+                            <div class="projects-holder-3">
+                                <div class="projects-holder">
+                                    <div class="row">
+                                        <div class="col-md-6 col-sm-6 project-item mix nature">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="img/php.png" data-lightbox="image-1"><img src="img/php.png"></a>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix animation">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="img/sql.png" data-lightbox="image-1"><img src="img/sql.png"></a>
+                                        <div class="col-md-6 col-sm-6 project-item mix animation">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="img/sql.png" data-lightbox="image-1"><img src="img/sql.png"></a>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
 
 
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6 col-sm-6 project-item mix graphic animation">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="img/ftpbig.png" data-lightbox="image-1"><img src="img/ftpsmall.png"></a>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 col-sm-6 project-item mix graphic animation">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="img/ftpbig.png" data-lightbox="image-1"><img src="img/ftpsmall.png"></a>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix graphic nature">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="img/hostingbig.png" data-lightbox="image-1"><img src="img/hostingsmall.png"></a>
+                                        <div class="col-md-6 col-sm-6 project-item mix graphic nature">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="img/hostingbig.png" data-lightbox="image-1"><img src="img/hostingsmall.png"></a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -171,7 +172,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
 
@@ -323,8 +323,39 @@
     <!-- Start of LiveChat (www.livechatinc.com) code -->
     <script>
         window.__lc = window.__lc || {};
-        window.__lc.license = 11941950;
-        ;(function(n,t,c){function i(n){return e._h?e._h.apply(null,n):e._q.push(n)}var e={_q:[],_h:null,_v:"2.0",on:function(){i(["on",c.call(arguments)])},once:function(){i(["once",c.call(arguments)])},off:function(){i(["off",c.call(arguments)])},get:function(){if(!e._h)throw new Error("[LiveChatWidget] You can't use getters before load.");return i(["get",c.call(arguments)])},call:function(){i(["call",c.call(arguments)])},init:function(){var n=t.createElement("script");n.async=!0,n.type="text/javascript",n.src="https://cdn.livechatinc.com/tracking.js",t.head.appendChild(n)}};!n.__lc.asyncInit&&e.init(),n.LiveChatWidget=n.LiveChatWidget||e}(window,document,[].slice))
+        window.__lc.license = 11941950;;
+        (function(n, t, c) {
+            function i(n) {
+                return e._h ? e._h.apply(null, n) : e._q.push(n)
+            }
+            var e = {
+                _q: [],
+                _h: null,
+                _v: "2.0",
+                on: function() {
+                    i(["on", c.call(arguments)])
+                },
+                once: function() {
+                    i(["once", c.call(arguments)])
+                },
+                off: function() {
+                    i(["off", c.call(arguments)])
+                },
+                get: function() {
+                    if (!e._h) throw new Error("[LiveChatWidget] You can't use getters before load.");
+                    return i(["get", c.call(arguments)])
+                },
+                call: function() {
+                    i(["call", c.call(arguments)])
+                },
+                init: function() {
+                    var n = t.createElement("script");
+                    n.async = !0, n.type = "text/javascript", n.src = "https://cdn.livechatinc.com/tracking.js", t.head.appendChild(n)
+                }
+            };
+            !n.__lc.asyncInit && e.init(), n.LiveChatWidget = n.LiveChatWidget || e
+        }(window, document, [].slice))
+
     </script>
     <noscript><a href="https://www.livechatinc.com/chat-with/11941950/" rel="nofollow">Chat with us</a>, powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener nofollow" target="_blank">LiveChat</a></noscript>
     <!-- End of LiveChat code -->
