update to new tab

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </div>
                         <h4>24/7 Support via livechat of ticketsystem.</h4>
                         <div class="line-dec"></div>
-                        <p>Contacteer ons via onze livechat of ons <a href="http://172.27.66.110/index.php">ticketsysteem</a>!</p>
+                        <p>Contacteer ons via onze livechat of ons <a href="http://172.27.66.110/index.php" target="_blank">ticketsysteem</a>!</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
