--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                         <div class="icon">
                             <img src="img/service_icon_03.png" alt="">
                         </div>
-                        <h4>24/7 Support via livechat of ticketsystem.</h4>
+                        <h4>24/7 Support via livechat of helpdesk.</h4>
                         <div class="line-dec"></div>
-                        <p>Contacteer ons via onze livechat of ons <a href="http://172.27.66.110/index.php" target="_blank">ticketsysteem</a>!</p>
+                        <p>Contacteer ons via onze livechat of onze <a href="http://172.27.66.110/index.php" target="_blank">helpdesk</a>!</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
